<resources>
    <string name="app_name">ProyectoFinal</string>

    <string name="button_aprender">Aprender</string>
    <string name="button_quiz">Quiz</string>
    <string name="vocal_a">a</string>
    <string name="vocal_e">e</string>
    <string name="vocal_i">i</string>
    <string name="vocal_o">o</string>
    <string name="vocal_u">u</string>
    <string name="regresar">Regresar</string>
    <string name="siguiente">Siguiente</string>
    <string name="correctas_0">correctas: 0</string>
    <string name="malas_0">malas: 0</string>

    <string name="hint_user_name">Nombre de Usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_password_confirm">Confirmar contraseña</string>
    <string name="text_button_signup">Crear cuenta</string>
    <string name="text_button_signin">Iniciar Sesion</string>
    <string name="hint_name_create">Nombre</string>
    <string name="hint_user_name_create">Usuario</string>
    <string name="tomar_foto">Tomar Foto</string>
    <string name="username">username</string>
    <string name="high_score_10">HIGH SCORE:10</string>
    <string name="high_score">High Score</string>
    <string name="cerrar_sesion">cerrar sesion</string>
</resources>