<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fitsSystemWindows="true"
    tools:context="com.example.proyectofinal.views.Quiz">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.3">

            <TextView
                android:id="@+id/bien_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/correctas_0"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/highScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/bien_count"
                android:layout_centerHorizontal="true"
                android:text="@string/malas_0"
                android:textSize="22sp" />

            <ImageView
                android:id="@+id/imgQuiz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/highScore"
                android:layout_centerInParent="true"
                android:clickable="true"
                android:focusable="true"
                android:onClick="sonido" />

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/horizontal_card">

                <Button
                    android:id="@+id/a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:onClick="response"
                    android:text="@string/vocal_a"
                    android:theme="@style/RaisedButtonDark" />

                <Button
                    android:id="@+id/e"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:onClick="response"
                    android:text="@string/vocal_e"
                    android:theme="@style/RaisedButtonDark" />

                <Button
                    android:id="@+id/i"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:onClick="response"
                    android:text="@string/vocal_i"
                    android:theme="@style/RaisedButtonDark" />

                <Button
                    android:id="@+id/o"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:onClick="response"
                    android:text="@string/vocal_o"
                    android:theme="@style/RaisedButtonDark" />

                <Button
                    android:id="@+id/u"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:onClick="response"
                    android:text="@string/vocal_u"
                    android:theme="@style/RaisedButtonDark" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>