<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fitsSystemWindows="true"
    tools:context="com.example.proyectofinal.views.Menu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.6">

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/horizontal_card">

                <Button
                    android:id="@+id/aprender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_aprender"
                    android:theme="@style/RaisedButtonDark" />

                <Button
                    android:id="@+id/quiz"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_quiz"
                    android:theme="@style/RaisedButtonDark" />

                <Button
                    android:id="@+id/high_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/high_score"
                    android:theme="@style/RaisedButtonDark" />

                <Button
                    android:id="@+id/cerrar_sesion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cerrar_sesion"
                    android:theme="@style/RaisedButtonDark" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>